Revert "fixed the spacing top/bottom for the contents section and removed the space under the icon."
This reverts commit 6d42969417d2d1dae916f04690ae3c1eb3a27776.

--- a/gsusa/content/src/main/theme/custom/scss/components/_featured-stories.scss
+++ b/gsusa/content/src/main/theme/custom/scss/components/_featured-stories.scss
@@ -103,7 +103,7 @@ div.featured-stories {
       }
       .contents {
         @include grid-column(22, $center:true, $collapse:true);
-        margin-top: rem-calc(13);
+        margin-top: rem-calc(10);
       }
       &.no-padding {
         .bg-wrapper {
@@ -121,9 +121,6 @@ div.featured-stories {
         }
       }
       &.colorless {
-        .header {
-          padding: 0;
-        }
         .left-wrapper {
           & * {color: $white;}
           text-align: center;
@@ -137,6 +134,7 @@ div.featured-stories {
           [class^="icon-"] {
             float: none;
             display: block;
+            margin-bottom: rem-calc(38);
             font-size: rem-calc(60);
             margin-top: rem-calc(14);
           }
@@ -166,8 +164,7 @@ div.featured-stories {
         .icon-cross {
           @media #{$medium-up} {
             position: absolute;
-            right: rem-calc(15);
-            top: rem-calc(15);
+            right: 0;
           }
         }
       }
